style: ensure that the header, footer, and main section all take up the entirety of the viewport, so that on smaller screens, the header and footer don't get chopped off

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
   --yellow-500: rgb(255, 204, 86);
   --gray-200: rgb(229, 231, 235);
   --stone-50: rgb(250, 250, 249);
-
   --border-divider: 1px var(--gray-200) solid;
 }
 
@@ -22,9 +21,9 @@ body {
   color: var(--blue-500);
   background-color: var(--stone-50);
 
-  /* flexbox */
-  display: flex;
-  flex-direction: column;
+  /* grid */
+  display: grid;
+  grid-template-rows: 1fr 10fr 1fr;
 }
 
 h1,
@@ -81,16 +80,18 @@ h2>.smaller {
 
 /* MAIN */
 main {
-  flex: 1;
-  padding: 80px 0;
-  width: clamp(700px, 70dvw, 100%);
-  margin: 0 auto;
-
-  /* grid */
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
   align-items: center;
-  gap: 16px;
+  padding: 40px;
+}
+
+main>.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  align-items: center;
+  max-width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
 /* MAIN - LEFT SIDE */
@@ -116,7 +117,7 @@ h3 {
 }
 
 h1 {
-  font-size: clamp(3.5rem, 48px, 12vw);
+  font-size: clamp(3rem, 48px, 12vw);
 }
 
 p {
@@ -160,48 +161,9 @@ main>figure {
 }
 
 main img {
-  height: 100%;
-}
-
-/* grid collapse */
-@media only screen and (max-width: 1685px) {
-  main {
-    padding: 4px 20px;
-  }
-
-  /* put image on top */
-  main>figure {
-    order: -1;
-  }
-
-  .text-container {
-    padding-bottom: 20px;
-  }
-}
-
-/* mobile breakpoint */
-@media only screen and (max-width: 768px) {
-  .text-container {
-    gap: 4px;
-  }
-
-  hgroup {
-    gap: 16px;
-  }
-
-  h1 {
-    font-size: 3rem;
-  }
-
-  button {
-    font-size: 1rem;
-    padding: 8px 24px;
-  }
-
-  main img {
-    width: 100%;
-    max-height: 50dvh;
-  }
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
 }
 
 /* FOOTER */
@@ -255,4 +217,37 @@ dialog {
 ::backdrop {
   background-color: #989fad;
   opacity: .5;
+}
+
+/* MEDIA QUERIES */
+/* grid collapse */
+@media only screen and (max-width: 1685px) {
+  /* main {
+    padding: 4px 20px;
+  } */
+
+  /* put image on top */
+  main>figure {
+    order: -1;
+  }
+
+  /* .text-container {
+    padding-bottom: 20px;
+  } */
+}
+
+/* mobile */
+@media only screen and (max-width: 768px) {
+  .text-container {
+    gap: 4px;
+  }
+
+  hgroup {
+    gap: 16px;
+  }
+
+  button {
+    font-size: 1rem;
+    padding: 8px 24px;
+  }
 }
